--- a/RateLimitingWithSpring/src/main/resources/application.properties
+++ b/RateLimitingWithSpring/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #
 api.limit.path=/data/limits.yaml
+# redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
