add new domains(Tariff, PricingTariff) (#30)

--- a/RateLimitingWithSpring/src/main/resources/application.properties
+++ b/RateLimitingWithSpring/src/main/resources/application.properties
@@ -10,8 +10,12 @@ spring.jpa.generate-ddl=true
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-#
-api.limit.path=/data/limits.yaml
+# api limits
+api.limits.enabled=true
+api.packages.enabled=true
+api.limits.file-path=/data/limits.yaml
+api.packages.file-path=/data/packages.yaml
+api.user-key=key
 # redis
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
