--- a/RateLimitingWithSpring/src/main/resources/application.properties
+++ b/RateLimitingWithSpring/src/main/resources/application.properties
@@ -1,8 +1,9 @@
+server.port=8081
 # datasource
-spring.datasource.url=jdbc:postgresql://localhost:5432/rate_limit
+spring.datasource.url=jdbc:postgresql://localhost:5432/rate_limit_v2
 spring.datasource.username=postgres
 spring.datasource.password=2004
-spring.datasource.name=rate_limit
+spring.datasource.name=rate_limit_v2
 spring.datasource.driver-class-name=org.postgresql.Driver
 # jpa
 spring.jpa.show-sql=true
@@ -11,6 +12,7 @@ spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 # api limits
+api.limits.ddl=create
 api.limits.enabled=true
 api.packages.enabled=true
 api.limits.file-path=/data/limits.yaml
