--- a/RateLimitingWithSpring/pom.xml
+++ b/RateLimitingWithSpring/pom.xml
@@ -42,6 +42,11 @@
             <version>2.14.2</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.4</version>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
