--- a/RateLimitingWithSpring/src/main/resources/data/limits.yaml
+++ b/RateLimitingWithSpring/src/main/resources/data/limits.yaml
@@ -16,6 +16,57 @@
       requestCount: 10000
       timeType: MINUTE
       timeCount: 1
+    - plan: SUPER
+      requestType: LIMIT
+      requestCount: 100000
+      timeType: MINUTE
+      timeCount: 1
+- url: /api/v1/value2
+  method: POST
+  plans:
+    - plan: FREE
+      requestType: LIMIT
+      requestCount: 10
+      timeType: MINUTE
+      timeCount: 1
+    - plan: BASIC
+      requestType: LIMIT
+      requestCount: 1000
+      timeType: MINUTE
+      timeCount: 1
+    - plan: PRO
+      requestType: LIMIT
+      requestCount: 10000
+      timeType: MINUTE
+      timeCount: 1
+    - plan: SUPER
+      requestType: LIMIT
+      requestCount: 100000
+      timeType: MINUTE
+      timeCount: 1
+- url: /api/v1/value2321
+  method: POST
+  plans:
+    - plan: FREE
+      requestType: LIMIT
+      requestCount: 90
+      timeType: MINUTE
+      timeCount: 1
+    - plan: BASIC
+      requestType: LIMIT
+      requestCount: 9000
+      timeType: MINUTE
+      timeCount: 1
+    - plan: PRO
+      requestType: LIMIT
+      requestCount: 90000
+      timeType: MINUTE
+      timeCount: 1
+    - plan: SUPER
+      requestType: LIMIT
+      requestCount: 900000
+      timeType: MINUTE
+      timeCount: 1
 - url: /api/v1/check
   method: GET
   plans:
@@ -34,6 +85,29 @@
       requestCount: 15000
       timeType: MINUTE
       timeCount: 1
+- url: /api/v1/check/38296
+  method: GET
+  plans:
+    - plan: FREE
+      requestType: LIMIT
+      requestCount: 15
+      timeType: MINUTE
+      timeCount: 2
+    - plan: BASIC
+      requestType: LIMIT
+      requestCount: 1500
+      timeType: MINUTE
+      timeCount: 2
+    - plan: PRO
+      requestType: LIMIT
+      requestCount: 15000
+      timeType: MINUTE
+      timeCount: 2
+    - plan: SUPER
+      requestType: LIMIT
+      requestCount: 150000
+      timeType: MINUTE
+      timeCount: 2
 - url: /api/v1/echo/*
   method: GET
   plans:
@@ -54,3 +128,23 @@
       timeCount: 2
   variables:
     value: nurislom
+- url: /api/v1/echo/*
+  method: GET
+  plans:
+    - plan: FREE
+      requestType: LIMIT
+      requestCount: 30
+      timeType: WEEK
+      timeCount: 2
+    - plan: BASIC
+      requestType: LIMIT
+      requestCount: 3000
+      timeType: WEEK
+      timeCount: 2
+    - plan: PRO
+      requestType: LIMIT
+      requestCount: 40000
+      timeType: WEEK
+      timeCount: 2
+  variables:
+    value: 373
