--- a/RateLimitingWithSpring/src/main/resources/application.properties
+++ b/RateLimitingWithSpring/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.port=8081
 spring.main.allow-bean-definition-overriding=true
 # datasource
-spring.datasource.url=jdbc:postgresql://localhost:5432/rate_limit_v2
+spring.datasource.url=jdbc:postgresql://localhost:5432/rate_limiting_v2
 spring.datasource.username=postgres
 spring.datasource.password=2004
-spring.datasource.name=rate_limit_v2
+spring.datasource.name=rate_limiting_v2
 spring.datasource.driver-class-name=org.postgresql.Driver
 # jpa
 spring.jpa.show-sql=true
