--- a/RateLimitingWithSpring/pom.xml
+++ b/RateLimitingWithSpring/pom.xml
@@ -8,11 +8,11 @@
         <version>3.0.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
     <groupId>org.khasanof</groupId>
-    <artifactId>RateLimitingWithSpring</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>RateLimitingWithSpring</name>
-    <description>RateLimitingWithSpring</description>
+    <artifactId>khasanof-rate-limiting</artifactId>
+    <version>1.0.1</version>
+    <name>khasanof-rate-limiting</name>
 
     <properties>
         <java.version>17</java.version>
