--- a/fluent-bot-lib/pom.xml
+++ b/fluent-bot-lib/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.khasanof</groupId>
     <artifactId>fluent-telegrambot</artifactId>
-    <version>1.0.2</version>
+    <version>1.0.3</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -39,6 +39,11 @@
             <groupId>org.telegram</groupId>
             <artifactId>telegrambots</artifactId>
             <version>6.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.10.2</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
