update version 1.0.6 so much changes 😎

--- a/fluent-bot-lib/pom.xml
+++ b/fluent-bot-lib/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.khasanof</groupId>
     <artifactId>fluent-telegrambot</artifactId>
-    <version>1.0.5</version>
+    <version>1.0.6</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -39,6 +39,18 @@
             <groupId>org.telegram</groupId>
             <artifactId>telegrambots</artifactId>
             <version>6.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.Redempt</groupId>
+            <artifactId>crunch-JEL</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/crunch.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>com.ezylang</groupId>
+            <artifactId>EvalEx</artifactId>
+            <version>3.0.5</version>
         </dependency>
         <dependency>
             <groupId>org.reflections</groupId>
