--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <groupId>org.khasanof</groupId>
     <artifactId>DVPS-TSKS</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>khasanof-common-util</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
