--- a/fluent-bot-lib/fluent-bot-test/pom.xml
+++ b/fluent-bot-lib/fluent-bot-test/pom.xml
@@ -4,19 +4,20 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.khasanof</groupId>
-    <artifactId>DVPS-TSKS</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>khasanof-common-util</module>
-        <module>fluent-bot-lib/fluent-bot-test</module>
-    </modules>
+    <artifactId>fluent-bot-test</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.khasanof</groupId>
+            <artifactId>fluent-telegrambot</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+    </dependencies>
 
 </project>
