--- a/fluent-bot-lib/src/test/resources/application.properties
+++ b/fluent-bot-lib/src/test/resources/application.properties
@@ -2,3 +2,4 @@ bot.token=5101184142:AAF2StFB5HciO6N4--eh3mDP6RJ4Helmooo
 bot.username=@lunch_pdp_bot
 bot.process.type=BOTH
 bot.project.artifactId=fluent-bot-lib
+bot.project.groupId=org.khasanof
