--- a/spring-boot-starter-fluent/pom.xml
+++ b/spring-boot-starter-fluent/pom.xml
@@ -72,6 +72,11 @@
             <version>0.10.2</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.statemachine</groupId>
+            <artifactId>spring-statemachine-core</artifactId>
+            <version>3.2.1</version>
+        </dependency>
+        <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>31.0.1-jre</version>
