--- a/spring-boot-starter-fluent/pom.xml
+++ b/spring-boot-starter-fluent/pom.xml
@@ -12,13 +12,14 @@
 
     <groupId>org.khasanof</groupId>
     <artifactId>spring-boot-starter-fluent</artifactId>
-    <version>1.1.2</version>
+    <version>1.0.0</version>
 
     <name>spring-boot-starter-fluent</name>
     <description>spring-boot-starter-fluent</description>
 
     <properties>
         <java.version>17</java.version>
+        <khasanof.common.util.version>1.0.1</khasanof.common.util.version>
     </properties>
 
     <licenses>
@@ -57,8 +58,7 @@
         <dependency>
             <groupId>org.khasanof</groupId>
             <artifactId>khasanof-common-util</artifactId>
-            <version>1.0.0</version>
-            <optional>true</optional>
+            <version>${khasanof.common.util.version}</version>
         </dependency>
         <dependency>
             <groupId>org.telegram</groupId>
@@ -74,11 +74,6 @@
             <groupId>org.reflections</groupId>
             <artifactId>reflections</artifactId>
             <version>0.10.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.statemachine</groupId>
-            <artifactId>spring-statemachine-core</artifactId>
-            <version>3.2.1</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -118,6 +113,29 @@
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-install-plugin</artifactId>
+                <version>2.5.2</version>
+                <executions>
+                    <execution>
+                        <id>install-khasanof-common-util</id>
+                        <phase>clean</phase>
+                        <goals>
+                            <goal>install-file</goal>
+                        </goals>
+                        <configuration>
+                            <file>${project.basedir}/lib/khasanof-common-util-${khasanof.common.util.version}.jar</file>
+                            <repositoryLayout>default</repositoryLayout>
+                            <groupId>org.khasanof</groupId>
+                            <artifactId>khasanof-common-util</artifactId>
+                            <version>${khasanof.common.util.version}</version>
+                            <packaging>jar</packaging>
+                            <generatePom>true</generatePom>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
